// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBasicTableContainer basic - empty - custom message 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
/>
`;

exports[`EuiBasicTableContainer basic - empty array 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
/>
`;

exports[`EuiBasicTableContainer basic - empty promise loader 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
/>
`;

exports[`EuiBasicTableContainer basic - empty simple loader 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
/>
`;

exports[`EuiBasicTableContainer basic - with items 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
/>
`;

exports[`EuiBasicTableContainer with pagination 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 2,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 0,
    }
  }
/>
`;

exports[`EuiBasicTableContainer with pagination and error 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 2,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 0,
    }
  }
/>
`;

exports[`EuiBasicTableContainer with pagination and selection 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 10,
      "totalItemCount": 0,
    }
  }
  selection={
    Object {
      "itemId": "id",
      "onSelectionChanged": [Function],
    }
  }
/>
`;

exports[`EuiBasicTableContainer with pagination, selection and sorting 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 10,
      "totalItemCount": 0,
    }
  }
  selection={
    Object {
      "itemId": "id",
      "onSelectionChanged": [Function],
    }
  }
  sorting={
    Object {
      "sort": undefined,
    }
  }
/>
`;

exports[`EuiBasicTableContainer with pagination, selection, sorting and a single record action 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
      Object {
        "actions": Array [
          Object {
            "description": "edit",
            "name": "Edit",
            "onClick": [Function],
            "type": "button",
          },
        ],
        "name": "Actions",
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 10,
      "totalItemCount": 0,
    }
  }
  selection={
    Object {
      "itemId": "id",
      "onSelectionChanged": [Function],
    }
  }
  sorting={
    Object {
      "sort": undefined,
    }
  }
/>
`;

exports[`EuiBasicTableContainer with pagination, selection, sorting and column renderer 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 2,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 0,
    }
  }
  selection={
    Object {
      "itemId": "id",
      "onSelectionChanged": [Function],
    }
  }
  sorting={
    Object {
      "sort": undefined,
    }
  }
/>
`;

exports[`EuiBasicTableContainer with sorting 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  items={Array []}
  loading={true}
  noItemsMessage="Loading..."
  onChange={[Function]}
  sorting={
    Object {
      "sort": undefined,
    }
  }
/>
`;
